# search_media

./: .gitignore  CMakeLists.txt  README.md
src/: file_parser.cpp  file_parser.hh  main.cpp
